/* Kanji */ added definition "to reflect", from Genki 1 <映#32265991>

--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -26,12 +26,13 @@
 ===Kanji===
 {{ja-kanji|grade=6|rs=日05}}
 
-# {{defn|lang=ja|sort=日05}}
+# to [[reflect]]
 
 ====Readings====
 * {{ja-readings|goon=[[よう]] (yō)|kanon=[[えい]] (ei)|kun=[[はえる]] (haeru), [[うつる]] (utsuru), [[うつす]] (utsusu)}}
 
 ====Compounds====
+* {{term|映る||to [[reflect]]|tr=うつる, utsuru|lang=ja|sc=Jpan}}
 * {{term|映画||[[movie]]|tr=えいが, eiga|lang=ja|sc=Jpan}}
 * {{term|映写|lang=ja|sc=Jpan}}
 * {{term|映像|lang=ja|sc=Jpan}}
