--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -43,7 +43,9 @@
 * Italian: {{t|it|Jugoslavia}}, {{t|it|Iugoslavia|f}}
 {{trans-mid}}
 * Japanese: {{t|ja|ユーゴスラビア|tr=Yūgosurabia}}, {{t|ja|ユーゴスラヴィア|tr=Yūgosuravia}}
+* Kazakh: {{t|kk|Югославия|sc=Cyrl}}
 * Korean: {{t+|ko|유고슬라비아|tr=Yugoseullabia|sc=Hang}}
+* Kyrgyz: {{t|ky|Югославия|sc=Cyrl}}
 * Latvian: {{t|lv|Dienvidslāvija|f}}
 * Macedonian: {{t+|mk|Југославија|f|tr=Jugoslávija}}
 * Malay: {{t|ms|Yugoslavia}}
@@ -63,7 +65,9 @@
 * Swedish: {{t+|sv|Jugoslavien}}
 * Thai: {{t|th|ยูโกสลาเวีย|tr=yoogòhtlaawia}}
 * Turkish: {{t+|tr|Yugoslavya}}
+* Turkmen: {{t|tk|Ýugoslawiýa}}
 * Ukrainian: {{t|uk|Югославія|f|tr=Juhoslávija}}
+* Uzbek: {{t|uz|Yugoslaviya}}
 * Vietnamese: {{t+|vi|Nam Tư}} ({{t|vi|南斯|sc=Hani}})
 {{trans-bottom}}
 
