--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -33,7 +33,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 #: ''I '''pulled''' at the club last night.''
 #: ''He's pulled that bird over there.''
 # {{context|transitive|lang=en}} to [[remove]] (something), especially from public [[circulation]] or [[availability]]
-#: ''Each day, they pulled the old bread and set out fresh loaves.''
+#: ''Each day, they '''pulled''' the old bread and set out fresh loaves.''
 # {{context|transitive|informal|lang=en}} to [[do]] or [[perform]]
 #: ''He regularly '''pulls''' 12-hour days, sometimes 14.''
 #: ''You'll be sent home if you '''pull''' another stunt like that.''
@@ -66,7 +66,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 #* R. H. Lyttelton
 #*: Never '''pull''' a straight fast ball to leg.
 # {{context|UK|slang|lang=en}} To pour beer from a pump, keg, or other source.
-#: ''Let's stop at Finnigan's.  The barkeep ''pulls'' a good pint.''
+#: ''Let's stop at Finnigan's.  The barkeep '''pulls''' a good pint.''
 
 ====Synonyms====
 * {{sense|apply force to (something) so it comes toward}} [[drag]], [[tow]], [[tug]], [[yank]]
