--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -131,9 +131,9 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Kurdish:
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=ku-Arab}}
 * Latgalian: {{t|ltg|kaitavuot}}
-{{trans-mid}}
 * Latin: {{t|la|lūdō}}
 * Latvian: {{t|lv|spēlēt}}
+{{trans-mid}}
 * Lithuanian: {{t+|lt|žaisti}}
 * Macedonian: {{t|mk|игра}}
 * Malay: {{t|ms|bermain}}
@@ -167,6 +167,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Swedish: {{t+|sv|leka}}
 * Tagalog: {{t|tl|maglaro}}
 * Telugu: {{t+|te|ఆడు|tr=aaDu}}
+* Tok Pisin: {{t|tpi|pilai}}
 * Turkish: {{t+|tr|oynamak}}
 * Ukrainian: {{t+|uk|гра́ти}}
 * Urdu: {{t|ur|کھیلنا|tr=khelnā|sc=ur-Arab}}
