--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -203,6 +203,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Jèrriais: {{t|roa-jer|jouer}}, {{t|roa-jer|sonner}}
 * Khmer: {{t+|km|ដេញ|tr=dəɲ|sc=Khmr}}
 * Latgalian: {{t|ltg|spieļuot}}
+* Latin: {{t|la|cano}}
 * Latvian: {{t|lv|spēlēt}}
 * Lojban: {{t|jbo|zgipli}}
 * Macedonian: {{t|mk|свири}}
