--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -161,6 +161,7 @@
 * Finnish: {{t+|fi|oliivinvihreä}}
 * Greek: {{t|el|λαδί|n|tr=ladí}}
 * Hindi: {{t|hi|तैलबदर|tr=tailbadara|sc=Deva}}, {{t|hi|तैलबदर रंग|tr=tailbadara ranga|sc=Deva}}, {{t|hi|तैलबदर हरि|tr=tailbadara hari|sc=Deva}}
+* Ido: {{t+|io|olivea}}
 * Italian: {{t+|it|verde oliva}}
 * Japanese: {{t|ja|オリーブ色|tr=orību-iro}}, {{t|ja|橄欖色|tr=かんらんしょく, kanranshoku|sc=Jpan}}
 * Korean: {{t|ko|올리브색}}
