--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -237,6 +237,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * Marathi: {{t|mr|पोट|sc=Deva}}
 * Mongolian: {{t-needed|mn}}
 * Navajo: {{t|nv|abid}}
+* Norman: {{t|nrf|ventre|m}} {{qualifier|Jersey, Guernsey}}, {{t|nrf|vãtr|m}} {{qualifier|Sa;rk}}
 * Norwegian: {{t+|no|mage|m}}, {{t+|no|buk|m}}
 * Persian: {{t+|fa|شکم|tr=šekam|sc=fa-Arab}}
 * Polish: {{t+|pl|brzuch|m}}
