--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -284,7 +284,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * [[on the pull]]
 * [[pull cord]]
 {{rel-mid}}
-* [[ring-pull]]
+* [[ring-pull]], [[ring pull]]
 {{rel-bottom}}
 
 ====Translations====
