--- a/en/坚/坚.13021.wikitext
+++ b/en/坚/坚.13021.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 {{zh-hanzi-box|坚|[[堅]]}}
 ===Etymology===
-{{Han simp|堅|f=臤}}.
+{{Han simp|堅|f=臣|t=⿰丨丨}}.
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=中水土 (LEG)}}
@@ -14,5 +14,6 @@
 * {{Han ref|kx=0226.101|dkj=04963|dj=0461.180|hdz=10422.140|uh=575A|ud=22362}}
 
 ----
+
 ==Chinese==
 {{zh-see|堅}}
