t+fa:[[خلاندن]] ([[WT:EDIT|Assisted]]) <stab#32319021>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -142,6 +142,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, t
 * Lithuanian: {{t|lt|badyti}}
 * Maori: {{t|mi|oka}}
 * Norwegian: {{t+|no|stikke}}
+* Persian: {{t+|fa|خلاندن|tr=xalândan|sc=fa-Arab}}
 * Portuguese: {{t+|pt|apunhalar}}, {{t|pt|esfaquear}}
 * Quechua: {{t|qu|t'urpuy}}
 * Rapa Nui: {{t|rap|oka}}
