t+ta:[[குங்குமப்பூ]] ([[WT:EDIT|Assisted]]) <saffron#32321931>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -86,6 +86,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 * Spanish: {{t+|es|azafrán|m}}
 * Swahili: {{t|sw|mzafarani}}
 * Swedish: {{t+|sv|saffran}}
+* Tamil: {{t+|ta|குங்குமப்பூ|tr=kuṅkumapū|sc=Taml}}
 * Thai: {{t+|th|หญ้าฝรั่น|tr=Ya Faran}}
 * Turkish: {{t+|tr|safran}}
 * Urdu: {{t|ur|کیسر|tr=kesar|f}}
@@ -132,6 +133,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 * Spanish: {{t+|es|azafrán|m}}
 * Swahili: {{t|sw|zafarani}}
 * Swedish: {{t+|sv|saffran}}
+* Tamil: {{t+|ta|குங்குமப்பூ|tr=kuṅkumappū|sc=Taml}}
 * Turkish: {{t+|tr|safran}}
 * Welsh: {{t|cy|saffrwm|m}}, {{t|cy|saffrwn|m}}
 {{trans-bottom}}
