--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -44,7 +44,7 @@ One possibility is that 早 is a pictograph of [[sun]] (日) over the [[horizon]
 # {{cx|Beginning Mandarin|lang=zh}} [[early]]; [[in advance]]; [[soon]]
 #* {{zh-usex|我 醒 得 很 '''早'''|I woke up '''early'''}}	  
 #* {{zh-usex|你 能 不 能 '''早''' 一點 來？|Can you be here a little '''earlier'''?}}
-#* {{zh-usex|請問，我 今天 '''早''' 走 一會兒 行 嗎？|Please could I leave '''early''' today?}}	  
+#* {{zh-usex|請問，我 今天 '''早''' 走 一會兒{r} 行 嗎？|Please could I leave '''early''' today?}}	  
 
 ====References====
 *(''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=2446&curpage=1&sample=%E6%97%A9&radiobutton=1&querytarget=1&limit=20&pagenum=2&rowcount=30 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
