--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -399,7 +399,7 @@ From {{etyl|enm|en}} {{term|feele|lang=enm}}, {{term|fele|lang=enm}}, {{term|feo
 ====Pronoun====
 {{en-pron}}
 
-# {{alternative form of|fele|lang=en}}
+# {{context|dialectal|or|obsolete}} {{alternative form of|fele|lang=en}}
 
 ====Adjective====
 {{en-adj|-}}
