--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -2,7 +2,8 @@
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/kɒst/|lang=en}}
-* {{a|US}} {{IPA|/kɔst/|/kɑst/|lang=en}}
+* {{a|GenAm}} {{IPA|/kɔst/|lang=en}}
+* {{a|cot-caught|Canada}} {{IPA|/kɑst/|lang=en}}
 * {{audio|en-us-cost.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-to cost.ogg|Audio (UK)|lang=en}}
 * {{rhymes|ɒst|lang=en}}
