--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -4,7 +4,7 @@
 {{was wotd|2008|November|28}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, from {{etyl|fro|en}} {{term|cenit|lang=fro}} and/or {{etyl|la|en}} {{term|cenit|lang=la}}, a transliteration of {{etyl|ar|en}} {{term|سمت||direction, path|tr=samt|lang=ar|sc=Arab}} which is in itself a weak abbreviation of {{term|سمت الرأس||direction of the head|tr=samt ar-ra's|lang=ar|sc=Arab}}.
+From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, from {{etyl|fro|en}} {{term|cenit|lang=fro}} and/or {{etyl|la|en}} {{term|cenit|lang=la}}, a transliteration of {{etyl|ar|en}} {{term|سمت||direction, path|tr=samt|lang=ar|sc=Arab}} which is in itself a weak abbreviation of {{m|ar|سمت الرأس||direction of the head|tr=samt ar-raʾs}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈzɛn.ɪθ/|lang=en}}
