t+ang:[[gebleod]] ([[WT:EDIT|Assisted]]) <beautiful#32346172>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -132,7 +132,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Novial: {{t|nov|beli}}
 * Occitan: {{t+|oc|bèl|m}}, {{t+|oc|bèla|f}}, {{t+|oc|bèu|m}}
 * Old Church Slavonic: {{t|cu|красьнъ|sc=Cyrs}}
-* Old English: {{t|ang|wlitig}}, {{t|ang|fæger}}, {{t|ang|freawlitig}}
+* Old English: {{t|ang|wlitig}}, {{t|ang|fæger}}, {{t|ang|freawlitig}}, {{t|ang|gebleod }}
 * Old Norse: {{t|non|fagr}}
 * Old Provençal: {{t|pro|bel}}
 * Persian: {{t+|fa|زیبا|tr=zibâ}}, {{t+|fa|قشنگ|tr=qašang}}
