--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -90,7 +90,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Finnish: {{t+|fi|kaunis}}
 * French: {{t+|fr|beau|m}}, {{t+|fr|belle|f}}
 * Friulian: {{t|fur|biel|m}}, {{t|fur|biele|f}}
-* Georgian: {{t|ka|მშვენიერი|sc=Geor}}, {{t|ka|ლამაზი|sc=Geor}}
+* Georgian: {{t|ka|მშვენიერი|sc=Geor}}, {{t|ka|ლამაზი|sc=Geor}}, {{t|ka|ტურფა|sc=Geor}}, {{t|ka|საუცხოო|sc=Geor}}, {{t|ka|საყვარელი|sc=Geor}}, {{t|ka|მომხიბლავი|sc=Geor}}, {{t|ka|მიმზიდველი|sc=Geor}}, {{t|ka|სასიამოვნო|sc=Geor}}, {{t|ka|სანდომიანი|sc=Geor}}, {{t|ka|წარმტაცი|sc=Geor}}, {{t|ka|თვალწარმტაცი|sc=Geor}}, {{t|ka|კოხტა|sc=Geor}}, {{t|ka|მოხდენილი|sc=Geor}}, {{t|ka|პირმშვენიერი|sc=Geor}}
 * German: {{t+|de|schön}}
 * Greek: {{t+|el|ωραίος}}, {{t+|el|όμορφος}}
 * Hebrew: {{t+|he|יָפֶה|m|tr=yafé}}, {{t+|he|יָפָה|f|tr=yafá}}
