--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -122,7 +122,7 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * Esperanto: {{t|eo|kurbo}}
 * Finnish: {{t+|fi|kaari}}, {{t+|fi|käyrä}}
 * French: {{t+|fr|courbe|f}}
-* Georgian: {{t|ka|წირი|sc=Geor}}
+* Georgian: {{t|ka|წირი|sc=Geor}}, {{t|ka|მრუდი|sc=Geor}}
 * German: {{t+|de|Linie|f}}
 * Greek: {{t+|el|καμπύλη|f|tr=kampýli}}
 * Hungarian: {{t+|hu|görbe}}
