--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -79,12 +79,12 @@
 =====Translations=====
 {{trans-top|transitive: apply a force to (an object) so that it moves away}}
 * Arabic: {{t+|ar|دفع|tr=dáfaʿa|sc=Arab}}
-* Armenian: {{t+|hy|հրել|tr=hrel|sc=Armn}}
+* Armenian: {{t+|hy|հրել|sc=Armn}}
 * Aromanian: {{t|rup|pingu}}
 * Belarusian: {{t|be|штурхаць|impf|tr=štúrxacʹ|sc=Cyrl}}, {{t|be|штурхнуць|pf|sc=Cyrl}}
 * Bengali: {{t|bn|ধাক্কা দেওয়া|tr=dhakka deoa|sc=Beng}}, {{t|bn|ধাক্কানো|tr=dhakkano|sc=Beng}}
-* Bulgarian: {{t+|bg|бутам|tr=butam|sc=Cyrl}}, {{t+|bg|блъскам|tr=blǎskam|sc=Cyrl}}
-* Burmese: {{t+|my|တွန်း|tr=tun:|sc=Mymr}}
+* Bulgarian: {{t+|bg|бутам|sc=Cyrl}}, {{t+|bg|блъскам|sc=Cyrl}}
+* Burmese: {{t+|my|တွန်း|sc=Mymr}}
 * Catalan: {{t+|ca|empènyer}}
 * Chinese:
 *: Mandarin: {{t+|cmn|推|tr=tuī|sc=Hani}}
@@ -96,7 +96,7 @@
 * Friulian: {{t|fur|sburtâ}}, {{t|fur|pocâ}}, {{t|fur|stocâ}}, {{t|fur|stossâ}}, {{t|fur|parâ}}
 * Galician: {{t+|gl|empurrar}}, {{t|gl|empuxar}}
 * German: {{t+|de|drücken}}, {{t+|de|schieben}}, {{t+|de|stoßen}}
-* Greek: {{t+|el|σπρώχνω|tr=spróxno|sc=Grek}}
+* Greek: {{t+|el|σπρώχνω|sc=Grek}}
 * Hindi: {{t|hi|धकेलना|tr=dhakelnā|sc=Deva}}
 * Hungarian: {{t+|hu|tol}}, {{t|hu|megtol}}, {{t+|hu|lök}}
 * Icelandic: {{t|is|hrinda}}, {{t+|is|ýta}}
@@ -135,7 +135,7 @@
 * Sundanese: {{t|su|sorong}}
 * Swahili: {{t|sw|kusukuma}}
 * Swedish: {{t|sv|skjuta på}}
-* Telugu: {{t+|te|నెట్టు|tr=neTTu|sc=Telu}}, {{t+|te|తోయు|tr=tOyu|sc=Telu}}
+* Telugu: {{t+|te|నెట్టు|sc=Telu}}, {{t+|te|తోయు|sc=Telu}}
 * Thai: {{t+|th|ดัน|tr=dan|sc=Thai}}, {{t+|th|กด|tr=gòt|sc=Thai}}, {{t|th|ผลัก|tr=phlàk|sc=Thai}}
 * Ukrainian: {{t|uk|штовхати|impf|tr=štovxáty|sc=Cyrl}}
 * Urdu: {{t|ur|دھکیلنا|tr=dhakelnā|sc=ur-Arab}}
@@ -153,7 +153,7 @@
 * Latvian: {{t|lv|skubināt}}
 * Polish: {{t+|pl|pchać}}, {{t|pl|popychać}}
 * Russian: {{t+|ru|подталкивать|tr=podtálkivatʹ|sc=Cyrl}}, {{t+|ru|подгонять|tr=podgonjátʹ|sc=Cyrl}}
-* Telugu: {{t|te|నిరంతర వత్తిడి|tr=niramtara vattidi|sc=Telu}}
+* Telugu: {{t|te|నిరంతర వత్తిడి|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|continually attempt to promote (a point of view)}}
@@ -161,14 +161,14 @@
 *: Sorani: {{t|ckb|پاڵ پێوه‌نان|sc=ku-Arab}}
 * Russian: {{t+|ru|продвигать|tr=prodvigátʹ|sc=Cyrl}}, {{t+|ru|проталкивать|tr=protálkivatʹ|sc=Cyrl}}
 {{trans-mid}}
-* Telugu: {{t|te|ఆగగని ప్రతిపాదన|tr=agani pratipadana|sc=Telu}}
+* Telugu: {{t|te|ఆగగని ప్రతిపాదన|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|promote (a product)}}
 * Czech: {{t|cs|prosazovat}}
 * Russian: {{t+|ru|продвигать|tr=prodvigátʹ|sc=Cyrl}}
 {{trans-mid}}
-* Telugu: {{t+|te|ప్రతిపాదించు|tr=pratipadincu|sc=Telu}}
+* Telugu: {{t+|te|ప్రతిపాదించు|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|intransitive: apply force to an object so that it moves away}}
@@ -181,7 +181,7 @@
 {{trans-mid}}
 * Russian: {{t+|ru|толкать|tr=tolkátʹ|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|stob}}
-* Telugu: {{t|te|శక్తివంతముగా తోయుట|tr=saktivamtamuga toyuta|sc=Telu}}
+* Telugu: {{t|te|శక్తివంతముగా తోయుట|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|intransitive: tense the muscles of the abdomen}}
@@ -190,11 +190,11 @@
 * Russian: {{t+|ru|тужиться|tr=túžitʹsja|sc=Cyrl}} {{qualifier|of women during birth}}
 {{trans-mid}}
 * Spanish: {{t|es|pujar}}
-* Telugu: {{t|te|హృదయాంతర్గత రాగము|tr=hrudayantargata ragamu|sc=Telu}}
+* Telugu: {{t|te|హృదయాంతర్గత రాగము|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|(intrans.) continue to attempt to persuade a person into a particular course of action}}
-* Telugu: {{t|te|బలవంతంగా చేయించు|tr=balavamtamga ceyincu|sc=Telu}}
+* Telugu: {{t|te|బలవంతంగా చేయించు|sc=Telu}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -239,7 +239,7 @@
 * Russian: {{t+|ru|толчок|m|sc=Cyrl|tr=tolčók}}
 * Spanish: {{t|es|empujón|m}}
 * Swedish: {{t+|sv|ryck}}
-* Telugu: {{t|te|వెనుకకు నెట్టి ముందుకు పోవు|tr=venukaku netti munduku povu|sc=Telu}}
+* Telugu: {{t|te|వెనుకకు నెట్టి ముందుకు పోవు|sc=Telu}}
 {{trans-bottom}}
 
 {{trans-top|act of tensing the muscles of the abdomen in order to expel its contents}}
@@ -247,12 +247,12 @@
 {{trans-bottom}}
 
 {{trans-top|great effort (to do something)}}
-* Telugu: {{t|te|బృహత్ ప్రయత్నం|tr=bruhat prayatnam|sc=Telu}}
+* Telugu: {{t|te|బృహత్ ప్రయత్నం|sc=Telu}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|military: marching or drill maneuvre}}
-* Telugu: {{t+|te|విన్యాసము|tr=vinyasamu|sc=Telu}}
+* Telugu: {{t+|te|విన్యాసము|sc=Telu}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -268,8 +268,8 @@ Probably {{etyl|fr|en}} {{term|poche|lang=fr}}. See {{term|pouch|lang=en}}.
 # {{context|obsolete|UK|dialect|lang=en}} A [[pustule]]; a [[pimple]].
 #: {{rfquotek|Francis Bacon}}
 
-
 [[Category:1000 English basic words]]
+
 ----
 
 ==Albanian==
@@ -284,8 +284,6 @@ From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*puša}}, from *puksja, from {{etyl|ine-pro
 
 ===References===
 <references/>
-
-[[Category:Albanian nouns]]
 
 [[ar:push]]
 [[az:push]]
