--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -5,7 +5,7 @@
 * [[streight]] {{qualifier|obsolete}}
 
 ===Etymology===
-{{etyl|enm|en}} {{term|streght|lang=enm}}, the past participle of {{term|strechen||lang=enm|to stretch}}, from {{etyl|ang|en}} {{term|streccan|lang=ang}}.
+{{etyl|enm|en}} {{term|streght|lang=enm}}, the past participle of {{term|strechen||lang=enm|to stretch}}, from {{etyl|ang|en}} {{term|streccan|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*strakjaną}}, {{m|gem-pro|*strakkijaną||to stretch}}.
 
 ===Pronunciation===
 * {{audio|en-us-straight.ogg|Audio (US)|lang=en}}
