--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -29,7 +29,7 @@
 
 ====Readings====
 {{ja-kanjitab|こう|yomi=o}}
-* {{ja-readings|on=[[こう]] (kō)|kun=[[あな]] (ana), [[あなにする]] (ananisuru)}}
+* {{ja-readings|goon=[[きょう]] (kyō) {{non-joyo-reading}}|kanon=[[こう]] (kō)|kun=[[あな]] (ana), [[あなにする]] (ananisuru)}}
 
 ===Noun===
 {{ja-noun|こう}}
