--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -276,7 +276,9 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 ===Proper noun===
 {{pt-proper noun|m}}
 
-# {{l/en|Israel}} {{gloss|the state}}
+# {{l/en|Israel}} {{gloss|historical region in the southern part of the Levant}}
+# {{l/en|Israel}} {{gloss|a modern country in the Middle East}}
+# {{given name|male|lang=pt}}
 
 ----
 
