--- a/en/倹/倹.11078.wikitext
+++ b/en/倹/倹.11078.wikitext
@@ -14,12 +14,12 @@
 ==Japanese==
 
 ===Kanji===
-{{ja-kanji|grade=c|rs=人08}}
+{{ja-kanji|grade=c|rs=人08|style=s|kyu=儉}}
 
 # {{defn|lang=ja|sort=人08}}
 
 ====Readings====
-* {{ja-readings|on=[[けん]] (ken)|kun=[[つずまやか]] (tsuzumayaka)}}
+* {{ja-readings|goon=[[げん]] (gen) {{non-joyo-reading}}|kanon=[[けん]] (ken)|kun=[[つずまやか]] (tsuzumayaka)}}
 
 ----
 
