--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -72,6 +72,7 @@ From the {{etyl|enm|en}} {{m|enm|cenyth}}, from the {{etyl|ML.|en}} {{term|cenit
 * Latin: {{t|la|cenit|n}} {{qualifier|Mediaeval}}
 * Malay: {{t|ms|zenit}}
 * Manx: {{t|gv|ard-niau}}
+* Middle English: {{t|enm|cenyth}}
 * Polish: {{t+|pl|zenit|m}}, {{t|pl|apogeum|n}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Romanian: {{t+|ro|dric|m}}
