--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -34,36 +34,29 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 #: [[w:Anatole France|Anatole France]], a French poet, journalist, and novelist
 
 ====Related terms====
-* [[Franco-]]
-* [[francophobe]]
-* [[Francophone]]
-* [[Frankland]]
-* [[French]]
-* [[Frenchman]]
-* [[New France]]
-* [[Tour de France]]
+{{rel3|Franco-|francophobe|Francophone|Frankland|French|Frenchman|New France|Tour de France|lang=fr}}
 
 ====Translations====
 {{trans-top|country}}
 * Acehnese: {{t|ace|Peurancih}}
 * Afrikaans: {{t+|af|Frankryk}}
 * Albanian: {{t+|sq|Franca}}
-*: Gheg: [[Frankreich]]
+*: Gheg: {{t|aln|Frankreich}}
 * American Sign Language: {{t|ase|F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist}}
 * Antillean Creole: {{t|gcf|Lafrans}}
 * Arabic: {{t+|ar|فرنسا|f|tr=faránsa}}, {{qualifier|archaic}} {{t|ar|بلاد الإفرنج|f-p|tr=blad alʔifranj}}, {{qualifier|archaic}} {{t|ar|بلاد الفرنجة|f-p|tr=bilad alfirinja}}
-*: Egyptian Arabic: {{t|arz|فرنسا|f|tr= faransa|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|فرنسا|f|tr= faransa}}
 * Aragonese: {{t|an|Franzia|f}}
-* Armenian: {{t+|hy|Ֆրանսիա|tr=Fransia}}
+* Armenian: {{t+|hy|Ֆրանսիա}}
 * Aromanian: {{t|rup|Gallia}}, {{t|rup|Frantsia}}
 * Assamese: {{t|as|ফ্ৰান্স|sc=Beng}}
 * Asturian: {{t+|ast|Francia|f}}
 * Azeri: {{t+|az|Fransa}}
 * Basque: {{t+|eu|Frantzia}}
-* Belarusian: {{t|be|Францыя|f|tr=Fráncyja}}
+* Belarusian: {{t|be|Фра́нцыя|f}}
 * Bengali: {{t|bn|ফ্রান্স|tr=phrans|sc=Beng}}
 * Breton: {{t+|br|Frañs}} {{qualifier|state}}, {{t+|br|Bro-C'hall}} {{qualifier|country}}
-* Bulgarian: {{t+|bg|Франция|f|tr=Fráncija}}
+* Bulgarian: {{t+|bg|Фра́нция|f}}
 * Burmese: {{t|my|ပြင်သစ်နိုင်ငံ|tr=pyinthitnaingngan}}
 * Catalan: {{t+|ca|França|f}}
 * Cebuano: {{t|ceb|Pransiya}}
@@ -78,7 +71,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Crimean Tatar: {{t|crh|Frenkistan}}
 * Czech: {{t+|cs|Francie}}
 * Danish: {{t+|da|Frankrig}}, {{t|da|Franske Republik}}
-* Dhivehi: {{t|dv|ފަރަންސޭސިވިލާތް|tr=Faranseysi Vilath}}
+* Dhivehi: {{t|dv|ފަރަންސޭސިވިލާތް}}
 * Dutch: {{t+|nl|Frankrijk|n}}
 * East Futuna: {{t|fud|Falani}}
 * Esperanto: {{t+|eo|Francio}}, {{t+|eo|Francujo}}
@@ -87,9 +80,9 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Finnish: {{t+|fi|Ranska}}
 * French: {{t+|fr|France|f}}
 * Galician: {{t+|gl|Francia|f}}
-* Georgian: {{t|ka|საფრანგეთი|sc=Geor}}
+* Georgian: {{t|ka|საფრანგეთი}}
 * German: {{t+|de|Frankreich|n}}
-* Greek: {{t+|el|Γαλλία|f|tr=Gallía}}
+* Greek: {{t+|el|Γαλλία|f}}
 * Gujarati: {{t|gu|ફ્રાન્સ|tr=phrāns|sc=Gujr}}
 * Haitian Creole: {{t|ht|Frans}}
 * Hausa: {{t|ha|Faransa|f|alt=Fàr̃ansà}}
@@ -105,12 +98,11 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Italian: {{t+|it|Francia|f}}
 * Japanese: {{t+|ja|フランス|tr=Furánsu}}, {{t|ja|仏蘭西|tr=Furánsu}} {{qualifier|obsolete}}
 * Javanese: {{t|jv|Prancis}}
-* Jèrriais: {{t|roa-jer|France|f}}
 * Kalenjin: {{t|kln|Frans}}
 * Kamba: {{t|kam|Frans}}
-* Kannada: {{t+|kn|ಪ್ರಾಂಸ್|tr=prāns|sc=Knda}}
+* Kannada: {{t+|kn|ಪ್ರಾಂಸ್}}
 * Kashmiri: {{t|ks|फ्रांस|sc=ks-Arab}}
-* Kazakh: {{t+|kk|Франция|tr=Frantsiya|sc=Cyrl}}
+* Kazakh: {{t+|kk|Франция}}
 * Khmer: {{t+|km|បារាំង|sc=Khmr|tr=baarang}}, {{t|km|ប្រទេសបារាំង|sc=Khmr|tr=prɑteih baarang}}
 * Kikuyu: {{t|ki|Frans}}
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
@@ -128,23 +120,24 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Luhya: {{t|luy|Frans}}
 * Luo: {{t|luo|Frans}}
 * Luxembourgish: {{t+|lb|Frankräich|n}}
-* Macedonian: {{t+|mk|Франција|f|tr=Fráncija}}
+* Macedonian: {{t+|mk|Фра́нција|f}}
 * Malagasy: {{t+|mg|Frantsa}}
 * Malay: {{t|ms|Perancis}}
-* Malayalam: {{t|ml|ഫ്രാൻസ്|tr=phrāns|sc=Mlym}}
+* Malayalam: {{t|ml|ഫ്രാൻസ്}}
 * Maltese: {{t+|mt|Franza}}
 * Maori: {{t|mi|Parani}}, {{t|mi|Wīwī}}
 * Marathi: {{t|mr|फ्रांस|tr=phrāns|sc=Deva}}
 * Meru: {{t|mer|Frans}}
-* Mongolian: {{t+|mn|Франц|tr=Frants|sc=Cyrl}}, {{t|mn|Франц улс|tr=Frants uls|sc=Cyrl}}
+* Mongolian: {{t+|mn|Франц}}, {{t|mn|Франц улс}}
 * Nauruan: {{t|na|France}}
-* Navajo: {{t|nv|Dáághahii Dinéʼiʼ bikéyah}}
+* Navajo: {{t|nv|Dáághahii Dinéʼiʼ bikéyah|sc=Latn}}
 * Neapolitan: {{t|nap|Franza|f}}
+* Norman: {{t|nrf|France|f}} {{qualifier|Jersey}}
 * Norwegian: {{t+|no|Frankrike}} (Franske Republikk, Republikken Frankrike)
 * Novial: {{t|nov|Fransia}}
 * Occitan: {{t+|oc|França|f}}
 * Old English: {{t|ang|Francland}}
-* Ossetian: {{t|os|Франц|tr=Frants}}
+* Ossetian: {{t|os|Франц}}
 * Pashto: {{t|ps|فرانسه|sc=ps-Arab}}
 * Persian: {{t+|fa|فرانسه|tr=Farânse}}
 * Plains Cree: {{t|crk|wêmistikôsînâhk}}
@@ -153,18 +146,18 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Punjabi: {{t|pa|ਫ਼੍ਰਾਂਸ|sc=Guru}}
 * Romanian: {{t+|ro|Franța|f}}
 * Romansch: {{t|rm|Frantscha}}
-* Russian: {{t+|ru|Франция|f|tr=Fráncija}}
-* Sanskrit: {{t|sa|फ्रांस|tr=phrānsa}}
+* Russian: {{t+|ru|Фра́нция|f}}
+* Sanskrit: {{t|sa|फ्रांस}}
 * Sardinian: {{t|sc|Frantza}}
 * Scots: {{t|sco|Franse}}
-* Scottish Gaelic: An [[Fraing|Fhraing]]
+* Scottish Gaelic: {{t|gd|Fraing|alt=An Fhraing|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Француска|f|sc=Cyrl}}
 *: Roman: {{t+|sh|Francuska|f}}
 * Sicilian: {{t|scn|Francia|f}}
 * Sikkimese: {{t-needed|sip}}
 * Silesian: {{t|szl|Francyjo|f}}
-* Sinhalese: {{t|si|ප්‍රංශය|tr=praṁśaya|sc=Sinh}}
+* Sinhalese: {{t|si|ප්‍රංශය}}
 * Slovak: {{t|sk|Francúzsko|n}}
 * Slovene: {{t|sl|Fráncija|f}}
 * Sotho: {{t|st|France}}
@@ -172,14 +165,14 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Swahili: {{t+|sw|Ufaransa}}
 * Swedish: {{t+|sv|Frankrike}}
 * Tagalog: {{t|tl|Pransya}}
-* Tajik: {{t+|tg|Фаронса|tr=Faronsa|sc=Cyrl}}
-* Tamil: {{t|ta|பிரான்ஸ்|tr=pirāns}}
-* Telugu: {{t+|te|ఫ్రాన్స్|tr=phrāns|sc=Telu}}
+* Tajik: {{t+|tg|Фаронса}}
+* Tamil: {{t|ta|பிரான்ஸ்}}
+* Telugu: {{t+|te|ఫ్రాన్స్}}
 * Thai: {{t+|th|ฝรั่งเศส|tr=fàràngsèt}}
 * Tok Pisin: {{t|tpi|Pranis}}
 * Turkish: {{t+|tr|Fransa}}
 * Turkmen: {{t|tk|Fransiýa}}
-* Ukrainian: {{t+|uk|Франція|f|tr=Fráncija}}
+* Ukrainian: {{t+|uk|Фра́нція|f}}
 * Urdu: {{t|ur|فرانس|tr=frāns}}
 * Uyghur: {{t|ug|فرانسىيە|sc=ug-Arab}}
 * Vietnamese: {{t+|vi|Pháp}}, {{t|vi|nước Pháp}}
@@ -189,16 +182,16 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Walloon: {{t+|wa|France|f}}
 * Welsh: {{t+|cy|Ffrainc|f}}
 * West Frisian: {{t+|fy|Frankryk}}
-* Yiddish: {{t|yi|פֿראַנקרײַך|n|tr=Frankraykh|sc=Hebr}}
+* Yiddish: {{t|yi|פֿראַנקרײַך|n|tr=Frankraykh}}
 {{trans-bottom}}
 
 {{trans-top|a French surname}}
 * Chinese:
 *: Cantonese: {{t|yue|法郎士|tr=faat3 long4 si6|sc=Hani}}
 *: Mandarin: {{t|cmn|法郎士|tr=Fǎlángshì|sc=Hani}}
-* French: {{t+|fr|France|m|f}}
 {{trans-mid}}
-* Russian: {{t|ru|Франс|m|f|tr=Frans}}
+* French: {{t+|fr|France|m|f}}
+* Russian: {{t|ru|Франс|m|f}}
 {{trans-bottom}}
 
 ===See also===
@@ -247,24 +240,6 @@ From {{etyl|fro|fr}} {{term|France|lang=fro}}, from {{etyl|LL.|fr}} {{term|Franc
 
 ----
 
-==Jèrriais==
-
-===Etymology===
-From {{etyl|fro|roa-jer}} {{term|France|lang=fro}}, from {{etyl|LL.|roa-jer}} {{term|Francia|lang=la}}, from {{m|la|Francī}}, the name of a {{etyl|gem|roa-jer}} tribe.
-
-===Pronunciation===
-* {{audio|Jer-France.ogg|Audio|lang=roa-jer}}
-
-===Proper noun===
-{{roa-jer-proper noun|f}}
-
-# [[#English|France]]
-
-[[Category:roa-jer:Countries of Europe]]
-[[Category:roa-jer:France]]
-
-----
-
 ==Middle French==
 
 ===Proper noun===
@@ -273,6 +248,23 @@ From {{etyl|fro|roa-jer}} {{term|France|lang=fro}}, from {{etyl|LL.|roa-jer}} {{
 # {{l|en|France}} {{gloss|country of the Europe}}
 
 [[Category:frm:Countries]]
+
+----
+
+==Norman==
+{{wikipedia|lang=nrf}}
+===Etymology===
+From {{etyl|fro|nrf}} {{m|fro|France}}, from {{etyl|LL.|nrf}} {{m|la|Francia}}, from {{m|la|Francī}}, the name of a {{etyl|gem|nrf}} tribe.
+
+===Pronunciation===
+* {{audio|Jer-France.ogg|Audio (Jersey)|lang=nrf}}
+
+===Proper noun===
+{{nrf-proper noun|f}}
+
+# {{lb|nrf|Jersey}} [[#English|France]]
+
+{{catlangcode|nrf|Countries of Europe|France}}
 
 ----
 
