--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -1,5 +1,6 @@
 {{also|埀}}
 ==Translingual==
+
 ===Etymology===
 {{Han etyl}}
 
@@ -24,7 +25,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=[[seoi4]]|y=seui4}}
+{{yue-hanzi|jyut=seoi4|y=seui4}}
 
 # {{defn|lang=yue|sort=土05}}
 
@@ -33,7 +34,7 @@
 ==Japanese==
 
 ===Noun===
-{{ja-noun|k|hira=しで|rom=shide}}
+{{ja-noun|しで}}
 
 # zigzag-shaped paper streamer often used to adorn Shinto-related objects
 # [[hornbeam]] plant
@@ -47,7 +48,7 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[すい]] (''sui'')|kun=[[たれる]] ([[垂れる]], ''tareru''), [[たらす]] ([[垂らす]], ''tarasu''), [[たれ]] ([[垂れ]], ''tare''), [[なんなんとす]] ([[垂す]], ''nannantosu'')|nanori=[[たる]] (''taru''), [[だれ]] (''dare'')}}
+* {{ja-readings|goon=[[ずい]] (zui) {{non-joyo-reading}}|kanon=[[すい]] (sui)|kun=[[たれる]] ([[垂れる]], tareru), [[たらす]] ([[垂らす]], tarasu), [[たれ]] ([[垂れ]], tare), [[なんなんとす]] ([[垂す]], nannantosu)|nanori=[[たる]] (taru), [[だれ]] (dare)}}
 
 ====Compounds====
 {{top3}}
@@ -67,8 +68,6 @@
 * [[しみっ垂れ]] (''shimittare''): stinginess, miser
 {{bottom}}
 
-[[Category:Japanese terms written with one Han script character]]
-[[Category:Japanese terms spelled with 垂]]
 ----
 
 ==Korean==
@@ -136,7 +135,7 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-hantu|[[thùy]], [[thuỳ]]|rs=土05}}
+{{vi-hantu|thuỳ|rs=土05}}
 
 # {{defn|lang=vi|sort=土05}}
 
