--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -77,6 +77,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * Korean: {{t-needed|ko}}
 * Norwegian: {{t|no|grunnlegge}}
 {{trans-mid}}
+* Old English: {{t|ang|astemnian}}, {{t|ang|gegrundweallian}}
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 * Portuguese: {{t+|pt|fundar}}
 * Romanian: {{t-needed|ro}}
