added [[Category:en:Gastropods]] using [[Help:Gadget-HotCat|HotCat]] <olive#32422244>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -302,6 +302,7 @@ From {{etyl|la|gmh}} {{term|oliva|lang=la}}.
 [[Category:en:Browns]]
 [[Category:en:Yellows]]
 [[Category:en:Shorebirds]]
+[[Category:en:Gastropods]]
 
 ----
 
