--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -439,7 +439,7 @@ Cognate to French {{term|comme|lang=fr}}. See also Spanish {{term|como|lang=es}}
 # [[as]], [[like]]
 #: ''Blu '''come''' il mare,''
 #:: As blue '''as''' the sea.
-
+# [[such as]]
 ====Derived terms====
 * {{l/it|come mai}}
 * {{l/it|come se}}
