--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -1,6 +1,7 @@
 {{also|france}}
 ==English==
 {{wikipedia}}
+{{Wikivoyage}}
 [[File:LocationFrance.svg|thumb|Map showing the location of France (in red).]]
 
 ===Alternative forms===
