--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -205,6 +205,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Icelandic: {{t|is|talning|f}}
 * Italian: {{t+|it|conto|m}}, {{t+|it|conteggio|m}}, {{t+|it|calcolo|m}}
 * Portuguese: {{t+|pt|contagem|f}}
+* Quechua: {{t|qu|yupa}}
 * Romanian: {{t+|ro|socoti}}
 * Russian: {{t+|ru|счёт|m}}
 * Spanish: {{t+|es|cuenta|f}}
