t+fr:[[coûter]] ([[WT:EDIT|Assisted]]) <cost#32430151>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -257,6 +257,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 {{trans-bottom}}
 {{trans-top|To cause something to be lost}}
 * Chinese: {{t+|cmn|付出了；耗费了；花费了|sc=Hani}}
+* French: {{t+|fr|coûter}}
 {{trans-bottom}}
 
 ===Etymology 4===
