--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -257,7 +257,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 {{trans-bottom}}
 {{trans-top|To cause something to be lost}}
 * Chinese: {{t+|cmn|付出了；耗费了；花费了|sc=Hani}}
-* French: {{t+|fr|coûter}}
+* French: {{t+|fr|coûter}}, {{t+|fr|couter}}
 {{trans-bottom}}
 
 ===Etymology 4===
