--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -116,7 +116,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 * Swedish: {{t+|sv|hamn|c}}
 * Tagalog: {{t|tl|port}}, {{t|tl|daungan}}
 * Tajik: {{t|tg|бандар|tr=bandar|sc=Cyrl}}, {{t|tg|бандаргоҳ|sc=Cyrl}}, {{t|tg|порт|sc=Cyrl}}
-* Tamil: {{t|ta|றைமுகம்|sc=Taml}}
+* Tamil: {{t|ta|துறைமுகம்|sc=Taml}}
 * Tatar: {{t|tt|порт|sc=Cyrl}}
 * Telugu: {{t+|te|ఓడరేవు|sc=Telu}}
 * Thai: {{t|th|พอร์ต|tr=pôt|sc=Thai}}
