--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -94,7 +94,6 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Irish: {{t|ga|troid}}, {{t|ga|comhraic}}
 * Italian: {{t+|it|lottare}}, {{t+|it|azzuffarsi}}, {{t+|it|battersi}}
 * Japanese: {{t+|ja|喧嘩|tr=けんかする, kenka suru|sc=Jpan|alt=喧嘩する}}, {{t|ja|対決|tr=たいけつする, taiketsu suru|sc=Jpan|alt=対決する}}, {{t+|ja|戦う|tr=たたかう, tatakau|sc=Jpan}}, {{t|ja|闘う|tr=たたかう, tatakau|sc=Jpan}}
-* Jèrriais: {{t|roa-jer|freûler|alt=s'freûler}}
 * Kazakh: {{t|kk|төбелесу|tr=töbelesw|sc=Cyrl}}, {{t|kk|ұрысу|tr=urısw|sc=Cyrl}}, {{t|kk|күресу|tr=küresw|sc=Cyrl}}, {{t|kk|соғысу|tr=soğısw|sc=Cyrl}}
 * Khmer: {{t|km|វាយតប់|tr=wīē-dtop|sc=Khmr}}
 * Korean: {{t+|ko|다투다|sc=Kore}}, {{t+|ko|싸우다|sc=Kore}}
@@ -109,6 +108,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Macedonian: {{t|mk|бори|impf|tr=se bóri|alt=се бори|sc=Cyrl}}
 * Maltese: {{t|mt|ġlieda}}
 * Mongolian: {{t-needed|mn}}
+* Norman: {{t|nrf|freûler|alt=s'freûler}} {{qualifier|Jersey}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|stridj}}
 * Norwegian: {{t+|no|slåss}}, {{t|no|kjempe}}
 * Old English: {{t|ang|feohtan}}
@@ -254,7 +254,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 
 {{checktrans-top}}
 * Indonesian: {{t+check|id|tarung}}, {{t+check|id|tengkar}}, {{t+check|id|serang}}
-* Jèrriais: {{t-check|roa-jer|friper}}
+* Norman: {{t-check|nrf|friper}} {{qualifier|Jersey}}
 {{trans-mid}}
 * Romanian: {{t+check|ro|bătaie|f}}
 {{trans-bottom}}
