t+uk:[[коштувати]] ([[WT:EDIT|Assisted]]) <cost#32453539>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -252,6 +252,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Thai: {{t+|th|ราคา|tr=raakaa|sc=Thai}}
 * Turkish: {{t-needed|tr}}
 * Tuvan: {{t-needed|tyv}}
+* Ukrainian: {{t|uk|ко́штувати|impf|sc=Cyrl}}
 * Venetian: {{t|vec|costar}}, {{t|vec|gostar}}
 * Yoruba: {{t-needed|yo}}
 * Zulu: {{t|zu|biza|alt=-biza}}
