t+nrf:[[estonma]] t+nrf:[[estouma]] t+nrf:[[estuma]] t-balance ([[WT:EDIT|Assisted]]) <stomach#32454896>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -120,9 +120,9 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * Kinyarwanda: {{t-needed|rw}}
 * Kirundi: {{t-needed|rn}}
 * Korean: {{t+|ko|위|sc=Kore}} ([[胃]])
-{{trans-mid}}
 * Lao: {{t+|lo|ກະເພາະ|tr=ka phǫ|sc=Laoo}}
 * Latgalian: {{t|ltg|pasirds}}
+{{trans-mid}}
 * Latin: {{t|la|stomachus|m}}
 * Latvian: {{t|lv|kuņģis|m}}
 * Lithuanian: {{t+|lt|skrandis|m}}
@@ -138,6 +138,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * Marathi: {{t|mr|जठर|sc=Deva}}
 * Mongolian: {{t-needed|mn}}
 * Navajo: {{t|nv|abid|sc=Latn}}
+* Norman: {{t|nrf|estonma|m}} {{qualifier|Jersey}}, {{t|nrf|estouma|m}} {{qualifier|Guernsey}}, {{t|nrf|estuma|m}} {{qualifier|Sark}}
 * Norwegian: {{t+|no|mage|m}}
 * Novial: {{t-needed|nov}}
 * Old English: {{t|ang|maga|m}}
