--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -566,6 +566,7 @@ From {{etyl|enm|en}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|
 * Catalan: {{t+|ca|tallar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|切|tr=qiē|sc=Hani}}
+*: Min Nan: {{t|nan|kā|sc=Hani}}
 * Dalmatian: {{t|dlm|taljur}}
 * Danish: {{t|da|udskære}}
 * Dutch: {{t+|nl|snijden}}
