t+nan:[[thang1-li5]] ([[WT:EDIT|Assisted]]) <curtain#32462351>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -57,6 +57,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Catalan: {{t+|ca|cortina|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|窗簾|sc=Hani}}, {{t+|cmn|窗帘|tr=chuānglián|sc=Hani}}, {{t+|cmn|簾子|sc=Hani}}, {{t+|cmn|帘子|tr=liánzi|sc=Hani}}
+*: Min Nan: {{t|nan|thang1-li5|sc=Hani}}
 * Czech: {{t|cs|závěs|m}}
 * Danish: {{t+|da|gardin|n}}
 * Dutch: {{t+|nl|gordijn|n}}
