--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -333,6 +333,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Belarusian: {{t|be|лаві́ць|impf}}, {{t|be|злаві́ць|pf}}, {{t|be|залаві́ць|pf}}
 * Chinese:
 *: Mandarin: {{t+|cmn|捕獲|sc=Hani}}, {{t+|cmn|捕获|tr=bǔhuò|sc=Hani}}, {{t+|cmn|捕|tr=bǔ|sc=Hani}}
+*: Min Nan: {{t|nan|liah8|sc=Hani}}
 * French: {{t+|fr|attraper}}
 * Georgian: {{t|ka|დაჭერა|sc=Geor}}
 * German: {{t+|de|fangen}}
