t+nan:[[肉]] ([[WT:EDIT|Assisted]]) <flesh#32462445>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -93,6 +93,8 @@ From {{etyl|enm|en}} {{term|flesh|lang=enm}}, from {{etyl|ang|en}} {{m|ang|flǣs
 * Armenian: {{t+|hy|միս|tr=mis}}
 * Bulgarian: {{t+|bg|месо|n|sc=Cyrl}}
 * Catalan: {{t+|ca|carn|f}}
+* Chinese:
+*: Min Nan: {{t+|nan|肉|tr=bah4|sc=Hani}}
 * Danish: {{t+|da|kød}}
 * Dutch: {{t+|nl|vlees|n}}
 * Finnish: {{t+|fi|liha}}
