--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -335,10 +335,12 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 *: Mandarin: {{t+|cmn|捕獲|sc=Hani}}, {{t+|cmn|捕获|tr=bǔhuò|sc=Hani}}, {{t+|cmn|捕|tr=bǔ|sc=Hani}}
 *: Min Nan: {{t|nan|liah8|sc=Hani}}
 * French: {{t+|fr|attraper}}
+* Friulian: {{t|fur|cjapâ}}
 * Georgian: {{t|ka|დაჭერა|sc=Geor}}
 * German: {{t+|de|fangen}}
-* Italian: {{t+|it|agguantare}}
+* Italian: {{t+|it|agguantare}}, {{t|it|chiappare}}
 * Japanese: {{t|ja|捕らえる|tr=とらえる, toraeru|sc=Jpan}}, {{t|ja|捕まえる|tr=つかまえる, tsukamaeru|sc=Jpan}}
+* Lombard: {{t|lmo|ciapà}}
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}
 * Polish: {{t|pl|łapać|impf}}, {{t|pl|złapać|pf}}, {{t+|pl|schwytać|pf}}
@@ -358,6 +360,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Swedish: {{t+|sv|fånga}}
 * Ukrainian: {{t+|uk|лови́ти|impf}}, {{t+|uk|пійма́ти|pf}}
 
+* Venetian: {{t|vec|ciapar}}
 {{trans-bottom}}
 
 {{trans-top|to intercept an object in the air etc. {{jump|t|seize object}} }}
