--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -336,7 +336,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 *: Min Nan: {{t|nan|liah8|sc=Hani}}
 * French: {{t+|fr|attraper}}
 * Friulian: {{t|fur|cjapâ}}
-* Georgian: {{t|ka|დაჭერა|sc=Geor}}
+* Georgian: {{t|ka|დაჭერა}}
 * German: {{t+|de|fangen}}
 * Italian: {{t+|it|agguantare}}, {{t|it|acchiappare}}, {{t|it|afferrare}}, {{t|it|chiappare}}
 * Japanese: {{t|ja|捕らえる|tr=とらえる, toraeru|sc=Jpan}}, {{t|ja|捕まえる|tr=つかまえる, tsukamaeru|sc=Jpan}}
@@ -382,7 +382,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * German: {{t+|de|fangen}}
 * Hebrew: {{t+|he|תָּפַס|tr=tafás}}
 {{trans-mid}}
-* Hindi: {{t|hi|पकड़ना|tr=pakaṛnā|sc=Deva}}
+* Hindi: {{t|hi|पकड़ना|tr=pakaṛnā}}
 * Irish: {{t|ga|beir ar}}
 * Japanese: {{t|ja|捕まえる|tr=tsukamaeru}}, {{t+|ja|捕る|tr=toru}}
 * Korean: {{t+|ko|잡다|sc=Hang}}
@@ -447,23 +447,23 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 
 {{trans-top|to handle a computer error, especially an exception {{jump|t|handle error}} }}
 * Finnish: {{t+|fi|siepata}}
-{{trans-mid}}
 * Polish: {{t|pl|przechwycać|impf}}, {{t|pl|przechwycić|pf}}
+{{trans-mid}}
 * Portuguese: {{t+|pt|capturar}}
 {{trans-bottom}}
 
 {{checktrans-top|could be any sense}}
 * Indonesian: {{t-check|id|tangkap}}, {{t-check|id|sergap}}
 * Japanese: {{t-check|ja|捕まる|tr=[[つかまる]], tsukamaru|sc=Jpan}}, {{t-check|ja|捕まえる|tr=[[つかまえる]], tsukamaeru|sc=Jpan}}
-* Jèrriais: {{t-check|roa-jer|happer}}
+* Norman: {{t-check|nrf|happer}} {{qualifier|Jersey}}
 {{trans-mid}}
 * Romanian: {{t-check|ro|prinde}}
 * Spanish: {{t-check|es|atrapar}}
 {{trans-bottom}}
 
 [[Category:English irregular verbs]]
-
 [[Category:1000 English basic words]]
+
 ----
 
 ==French==
