--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -53,6 +53,7 @@
 * Burmese: {{t+|my|သံလွင်|tr=than lwin|sc=Mymr}}
 * Catalan: {{t|ca|oliva|f}}
 * Chinese:
+*: Cantonese: {{t|yue|橄欖|tr=gaam3 laam5-2|sc=Hani}}
 *: Mandarin: {{t|cmn|橄欖}}, {{t+|cmn|橄榄|tr=gǎnlǎn}}
 * Corsican: {{t+|co|aliva|f}}
 * Czech: {{t+|cs|oliva|f}}
