--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -39,6 +39,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}.
 * Arabic: {{t|ar|وهَلُمَّ جَرًّا|tr=wa-halumma jaraa|sc=Arab}}, {{t|ar|إلخ|tr='ilakh|sc=Arab}}, {{t|ar|إلى آخره|tr='íla 'aakhirih|sc=Arab}}
 * Armenian: {{t|hy|եւ այլն|sc=Armn}}
 * Asturian: {{t|ast|etcétera}}
+* Belarusian: {{t|be|і гэ́так да́лей|sc=Cyrl}}
 * Bengali: {{t+|bn|ইত্যাদি|tr=ittêdi|sc=Beng}}
 * Bulgarian: {{t|bg|и така нататък}}, {{t|bg|и т.н.}}
 * Catalan: {{t|ca|etcètera}}
@@ -61,8 +62,8 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}.
 * Icelandic: {{t+|is|og svo framvegis}}, {{t|is|o. s. frv.}}
 * Italian: {{t+|it|eccetera}}
 {{trans-mid}}
-* Japanese: {{t|ja|など|tr=nado|sc=Jpan}}, {{t+|ja|等|tr=とう, tō|sc=Jpan}}
-* Korean: {{t+|ko|기타|sc=Kore}}
+* Japanese: {{t|ja|など|tr=nado|sc=Jpan}}, {{t+|ja|等|tr=とう, tō|sc=Jpan}}, {{t|ja|等等|tr=とうとう, tōtō|sc=Jpan}}
+* Korean: {{t+|ko|기타|sc=Kore}}, {{t+|ko|등|sc=Kore}}, {{t+|ko|등등|sc=Kore}}
 * Latin: {{t+|la|et cetera}}
 * Latvian: {{t|lv|un tā tālāk}}, {{t|lv|utt.}}
 * Lithuanian: {{t|lt|ir taip toliau}}, {{t|lt|ir t.t.}}
@@ -81,6 +82,7 @@ From {{etyl|la|en}} {{term|et cētera||lang=la|and the rest" or "and so forth}}.
 * Spanish: {{t+|es|etcétera}}, {{t|es|y más}}
 * Swedish: et cetera, {{t+|sv|etc.}}, {{t+|sv|etcetera}}, {{t+|sv|och så vidare}}, {{t+|sv|o.s.v.}}, {{t+|sv|osv.}}, {{t+|sv|osv}} (informell)
 * Turkish: {{t|tr|ve saire}} ({{t|tr|vs}}) ''(old-fashioned)'', {{t|tr|ve bunun gibi}} ({{t|tr|vb}}), {{t|tr|ve benzeri}} ({{t|tr|vb}})
+* Ukrainian: {{t|uk|і так да́лі|sc=Cyrl}}
 * Urdu: {{t|ur|وغیرہ|tr=vaġairah|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|vân vân}}, {{t+|vi|v.v.}}
 {{trans-bottom}}
