--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -100,7 +100,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 * Bulgarian: {{t|bg|шафран|m}}
 * Catalan: {{t|ca|safrà|m}}
 * Chinese:
-*: Cantonese: {{t|yue|番紅花|tr=faan1 hung4 faa1|sc=Hani}}
+*: Cantonese: {{t|yue|番紅花|sc=Hani}}, {{t|yue|番红花|tr=faan1 hung4 faa1|sc=Hani}}
 * Czech: {{t|cs|šafrán|m}}
 * Dutch: {{t+|nl|saffraan}}
 * Esperanto: {{t|eo|safrano}}
