--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -95,6 +95,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Ido: {{t+|io|Francia}}
 * Indonesian: {{t+|id|Perancis}}, {{t+|id|Prancis}}
 * Interlingua: {{t|ia|Francia}}
+* Interlingue: {{t|ie|Francia}}
 * Irish: {{t+|ga|Frainc|alt=an Fhrainc|f}}
 * Italian: {{t+|it|Francia|f}}
 * Japanese: {{t+|ja|フランス|tr=Furánsu}}, {{t|ja|仏蘭西|tr=Furánsu}} {{qualifier|obsolete}}
