--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -203,6 +203,7 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * Catalan: {{t|ca|mantega|f}}
 * Cherokee: {{t|chr|ᎪᏢᏅ|tr=go⁠tlv⁠nv|sc=Cher}}
 * Chinese:
+*: Cantonese: {{t|yue|牛油|tr=ngau4 jau4|sc=Hani}}
 *: Mandarin: {{t+|cmn|黃油|sc=Hani}}, {{t+|cmn|黄油|tr=huángyóu|sc=Hani}}, {{t+|cmn|牛油|tr=niúyóu|sc=Hani}}, {{t+|cmn|白脫|sc=Hani}}, {{t+|cmn|白脱|tr=báituō|sc=Hani}}
 * Czech: {{t+|cs|máslo|n}}
 * Dalmatian: {{t|dlm|butir|m}}
