--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -17,9 +17,9 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 ===Noun===
 {{en-noun}}
 
-# A person of fair hair.<!--I removed "fair skin" because an African with dyed hair can be a blond. -sche.-->
 # A [[pale]] [[yellow]]ish ([[golden]] [[brown]]) [[color]], especially as a hair color.
 #: {{color panel|F8E8A7}}
+# A person with this hair color; especially, a young woman.
 
 ====Usage notes====
 *This word can vary according to gender, with "blond" being used of males and "blonde" of females, following French usage.
