--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -19,7 +19,7 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 
 # A [[pale]] [[yellow]]ish ([[golden]] [[brown]]) [[color]], especially as a hair color.
 #: {{color panel|F8E8A7}}
-# A person with this hair color; especially, a young woman.
+# A person with this hair color.
 
 ====Usage notes====
 *This word can vary according to gender, with "blond" being used of males and "blonde" of females, following French usage.
