t+hak:[[以色列]] t+nan:[[以色列]] t+yue:[[以色列]] t+nan:[[I-su-la-el]] t+cdo:[[以色列]] ([[WT:EDIT|Assisted]]) <Israel#32515426>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -54,7 +54,11 @@ From {{etyl|he|en}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}, 
 * Catalan: {{t+|ca|Israel|m}}
 * Chechen: {{t|ce|Израиль}}
 * Chinese:
+*: Cantonese: {{t|yue|以色列|tr=ji5 sik1 lit6|sc=Hani}}
+*: Hakka: {{t|hak|以色列|tr=Yî-set-lie̍t|sc=Hani}}
 *: Mandarin: {{t+|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
+*: Min Dong: {{t|cdo|以色列|tr=Ī-sáik-liĕk|sc=Hani}}
+*: Min Nan: {{t|nan|以色列|tr=Í-sek-lia̍t|sc=Hani}}, {{t|nan|I-su-la-el}}
 * Chuvash: {{t|cv|Израиль|sc=Cyrl}}
 * Czech: {{t+|cs|Izrael}}
 * Danish: {{t+|da|Israel}}, {{t|da|Staten Israel}}
