--- a/en/坲/坲.13045.wikitext
+++ b/en/坲/坲.13045.wikitext
@@ -10,12 +10,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[fat6]]|y=fat6}}
+===Pronunciation===
+{{zh-pron
+|m=坲
+|c=fat6
+|h=pfs=
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
@@ -31,15 +45,6 @@
 
 ====Readings====
 * {{ja-readings|on=[[ふつ]] (futsu), [[ぶち]] (buchi), [[へつ]] (hetsu), [[べち]] (bechi)|kun=}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fó]] ([[fo2]])|wg=fo<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 [[fr:坲]]
 [[hu:坲]]
