--- a/en/坲/坲.13045.wikitext
+++ b/en/坲/坲.13045.wikitext
@@ -26,13 +26,10 @@
 |cat=n
 }}
 
-===Definitions===
-{{zh-hanzi}}
+===Verb===
+{{zh-verb}}
 
-# {{rfdef|lang=zh}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+# (of dust) to rise in the air
 
 ----
 
