--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -93,7 +93,7 @@ The traditional etymology follows the modern form in finding {{liushu|ic}}: {{te
 ===Kanji===
 {{ja-kanji|grade=2|rs=日04}}
 
-# {{defn|lang=ja|sort=日04}}
+# {{defn|lang=ja|sort.n=日04}}
 
 ====Readings====
 * {{ja-readings|kanon=[[めい]] (mei)|goon=[[みょう]] (myō)|toon=[[みん]] (min)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru), [[あかす]]　([[明かす, akasu]])}}
