--- a/en/倮/倮.11054.wikitext
+++ b/en/倮/倮.11054.wikitext
@@ -38,7 +38,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[lèng]] ([[leng4]]), [[líng]] ([[ling2]]), [[luǒ]] ([[luo3]])|wg=leng<sup>4</sup>, ling<sup>2</sup>, lo<sup>3</sup>}}
+{{cmn-hanzi|pin=[[luǒ]] ([[luo3]])|wg=lo<sup>3</sup>}}
 
 # {{defn|lang=cmn|sort=人08}}
 
