[[lv:skirt]] <skirt#32538569>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -298,6 +298,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 [[kk:skirt]]
 [[ku:skirt]]
 [[lo:skirt]]
+[[lv:skirt]]
 [[li:skirt]]
 [[hu:skirt]]
 [[mg:skirt]]
