--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -28,7 +28,7 @@ From {{etyl|enm|en}} {{m|enm|bewteful}}, {{m|enm|beautefull||attractive to the e
 #: {{usex|'''Beautiful'''! I dropped the soup on the floor!|lang=en}}
 
 ====Usage notes====
-The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the superlatives '''[[beautifulest]]''' and '''[[beautifullest]]''' have also occasionally been used, but are considered dated or obsolete.
+The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the superlatives '''[[beautifulest]]''' and '''[[beautifullest]]''' have also occasionally been used, but are nonstandard.
 
 ====Synonyms====
 * {{sense|possessing charm and attractive}} [[beauteous]], [[attractive]], [[cute]], [[fair]], [[good-looking]], [[gorgeous]], [[sheen]], [[handsome]], [[hot]] {{qualifier|slang}}, [[lovely]], [[nice-looking]], [[pretty]], [[shapely]], [[fit]] {{qualifier|slang}}
