--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -1,5 +1,6 @@
 {{also|日月}}
 ==Translingual==
+{{stroke order}}
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日月 (AB)|ids=⿰[[日]][[月]]}}
