--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -34,7 +34,7 @@
 ===Verb===
 {{zh-verb}}
 
-# {{context|Beginning Mandarin|lang=zh|sort=shi4}} to [[be]], [[is]], [[am]], [[are]]  {{non-gloss definition|([[copula]])}}
+# {{context|Beginning Mandarin|copulative|lang=zh|sort=shi4}} to [[be]], [[is]], [[am]], [[are]] 
 #: {{zh-usex|泰晤士河 是 ^英國 第二 長 的 河流。|The River Thames '''is''' the second longest river in the UK.}}
 #: {{zh-usex|我 '''是''' 老師|I '''am''' a teacher}}
 #: {{zh-usex|我 '''是''' 中國人|I '''am''' Chinese.}}
