--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -110,7 +110,7 @@
 *: Sorani: {{t|ckb|پاڵ دان|sc=ku-Arab}}
 * Latin: {{t|la|pello}}
 {{trans-mid}}
-* Latvian: {{t|lv|spiest}}
+* Latvian: {{t|lv|grūst}}
 * Macedonian: {{t|mk|турка|tr=túrka|sc=Cyrl}}, {{t|mk|бутка|tr=bútka|sc=Cyrl}}
 * Malay: {{t|ms|tolak}}
 * Neapolitan: {{t|nap|vottà}}
