--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -4,7 +4,7 @@
 {{stroke order|type=animate}}
 
 ===Etymology===
-{{Han compound|早|止|ls=ic}}, logic of compound unclear. From Old Chinese '''*deʔ''' (Baxter-Sagart).
+{{Han compound|早|止|ls=ic}}, logic of compound unclear. 
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6080<sub>1</sub>|canj=日一卜人 (AMYO)|ids=⿱[[日]]⿱[[一]][[龰]]}}
@@ -20,6 +20,9 @@
 ==Chinese==
 {{zh-forms}}
 
+===Etymology===
+From Old Chinese '''*deʔ''' (Baxter-Sagart).
+
 ===Pronunciation===
 {{zh-pron
 |m=shì
@@ -34,17 +37,22 @@
 ===Verb===
 {{zh-verb}}
 
-# {{context|Beginning Mandarin|copulative|lang=zh|sort=shi4}} to [[be]], [[is]], [[am]], [[are]] 
+# {{context|Beginning Mandarin|copulative|lang=zh|sort=shi4}} to [[be]]. 
 #: {{zh-usex|泰晤士河 是 ^英國 第二 長 的 河流。|The River Thames '''is''' the second longest river in the UK.}}
 #: {{zh-usex|我 '''是''' 老師|I '''am''' a teacher}}
 #: {{zh-usex|我 '''是''' 中國人|I '''am''' Chinese.}}
+# to occupy a place.
+#: {{zh-usex|到處 都 是|to '''be''' everywhere}}
+#: {{zh-usex|房子 前面 是 禾場。|The threshing floor '''is''' in front of the house.}}
+# {{non-gloss definition|A syntactic marker for [[emphasis]].}}
+#: {{zh-usex|我 是 昨天 買 的 票。|It '''was''' yesterday when I bought the ticket.}}
 
 ====Usage notes====
 Even if it is translated as to [[be]], 是 is used only to link two nouns or nominal expression.
 {{zh-usex|我 '''是''' 老師|I '''am''' a teacher}}
 {{zh-usex|泰晤士河 是 ^英國 第二 長 的 河流。|The River Thames '''is''' the second longest river in the UK.}}
 It can't be used to link a noun and an adjective. The following sentence is wrong : 
-: 这是好。
+: *这是好。
 The correct sentence is
 {{zh-usex|這 '''很''' 好|This '''is (very)''' good}}
 Here [[很]] is used as a filler, to link a noun and an adjective and is not interpreted as very. Not using it would sound unnatural.
@@ -58,6 +66,8 @@ A way to use 是 with an adjective is to use {{zh-l|的}} after the adjective to
 {{zh-noun}}
 
 # [[yes]] (as answer to a question)
+# {{context|archaic}} affair.
+#: {{zh-usex|共 商 國 是|to discuss national '''affairs'''}}
 
 ===Adjective===
 {{zh-adj}}
@@ -67,6 +77,18 @@ A way to use 是 with an adjective is to use {{zh-l|的}} after the adjective to
 ====Compounds====
 * {{zh-l|是否}}
 * {{zh-l|是非}}
+
+===Determiner===
+{{zh-det}}
+
+# {{context|archaic}} this.
+#: {{zh-usex|是日|this day}}
+
+===Pronoun===
+{{zh-pronoun}}
+
+# {{context|archaic}} this.
+#: {{zh-usex|是 可 忍 ， 孰 不 可 忍 ？|If '''this''' can be tolerated, what cannot?}}
 
 ===References===
 * {{cite web
