--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -177,6 +177,8 @@ From {{etyl|la|es}} {{m|la|līber}}
 # {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|librar}}
 # {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|librar}}
 
+[[Category:1000 basic Spanish words]]
+
 ----
 
 ==Tagalog==
