rmv sense added in previous diff, though retaining quotation; see [[Talk:UCLA]] for why considering a part of some group to under the whole group's name -- e.g. a team under the name of their nation or school -- is non-lexical <Germany#32573190>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -14,10 +14,12 @@ From {{etyl|enm|en}} {{term|Germanie|lang=enm}}, from {{etyl|ang|en}} {{term|Ger
 {{en-proper noun|~|Germanies|Germanys}}
 
 # {{context|geography|lang=en}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]], with its [[capital]] in [[Berlin]].
-#* '''2014 Sept. 25''', Michael Heise, "[http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084 The Myth of the Stupid German Investor]" in the ''Wall Street Journal''.
+#* '''2014 September 25''', Michael Heise, "[http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084 The Myth of the Stupid German Investor]" in the ''Wall Street Journal'':
 #*: Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''&rsquo;s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.
+#* '''2014 July 14''', Sam Bordenjuly, "[http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html  Germans End Long Wait: 24 Years and a Bit Extra]" in ''The New York Times'':
+#*: The win made Germany the first European team to prevail in a World Cup in the Americas and gave the Germans, who have made it to the knockout stage in 16 consecutive World Cups, their first trophy since 1990.
 # {{context|geography|historical|lang=en}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
-#* '''1996''', Paul Bookbinder, ''Weimar '''Germany''': the republic of the reasonable'' (ISBN 0719042879), page 90
+#* '''1996''', Paul Bookbinder, ''Weimar '''Germany''': the republic of the reasonable'' (ISBN 0719042879), page 90:
 #*: Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.
 # {{context|geography|historical|lang=en}} A [[nominal]] [[medieval]] [[kingdom]] in [[Central Europe]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s; by [[extension]], the [[Holy Roman Empire]] [[itself]], the [[empire]] of the [[Austria]]n [[Habsburg]]s.
 #* '''17th c.''', ''A Military History of Germany; and of England. From the Year 1631 to the Year 1648. Being the Memoirs of an English Gentleman, who served in the army of Gustavus Adolphus; and afterwards in the Royal Army of King Charles I'' (1759), [http://books.google.com/books?id=1JlBAAAAcAAJ&pg=PA33 page 33]: 
@@ -38,14 +40,11 @@ From {{etyl|enm|en}} {{term|Germanie|lang=enm}}, from {{etyl|ang|en}} {{term|Ger
 #*: The differences between England and the '''Germanies''' sprang from the absence or presence of ministerial interventions.
 #* '''2010''', Ilan Stavans, ''Gabriel García Márquez: The Early Years'', ISBN 0312240333:
 #*: In a Renault 14, they drove from one '''Germany''' to the other...
-#* '''2010 Sept. 29''', Klaus Wiegrefe, "[http://www.spiegel.de/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html Germany's Unlikely Diplomatic Triumph]" in ''Spiegel Online'':
+#* '''2010 September 29''', Klaus Wiegrefe, "[http://www.spiegel.de/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html Germany's Unlikely Diplomatic Triumph]" in ''Spiegel Online'':
 #*: It is the fall of 1989, and two time zones farther to the west, thousands of people march through downtown Leipzig every Monday, while more than 6,000 East German citizens are camped out in the embassies of West Germany in Prague and Warsaw, hoping to be allowed to emigrate. The images have circled the globe, and it is clear to leaders Thatcher and Gorbachev that the two '''Germanys''' are on the verge of radical change. 
-# {{context|sport|lang=en}} a team from Germany 
-#* '''2014 July 14''', Sam Bordenjuly, "[http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html  Germans End Long Wait: 24 Years and a Bit Extra]" in ''The New York Times'':
-#*: The win made Germany the first European team to prevail in a World Cup in the Americas and gave the Germans, who have made it to the knockout stage in 16 consecutive World Cups, their first trophy since 1990.
 
 ====Usage notes====
-In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> In its historic and historical use, the extent of "Germany" was a fraught issue, known in the 19th century as "[[w:The German Question|The German Question]]". The political area considered "Germany" might include or exclude areas such as [[Prussia]], [[Austria]], [[Bohemia]], or [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], etc.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{etyl|la|-}} {{term|rex|lang=la}} {{term|Teutonicorum|lang=la}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{term|rex|lang=la}} {{term|Romanorum|lang=la}} ("king of the [[Romans]]").
+In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> Historically, the extent of "Germany" was a contentious issue known in the 19th century as "[[w:The German Question|The German Question]]". The political area considered "Germany" might include or exclude areas such as [[Prussia]], [[Austria]], [[Bohemia]], or [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], etc.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{etyl|la|-}} {{term|rex|lang=la}} {{term|Teutonicorum|lang=la}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{term|rex|lang=la}} {{term|Romanorum|lang=la}} ("king of the [[Romans]]").
 
 ====Synonyms====
 * {{sense|present state}} [[Federal Republic of Germany]] ([[FRG]], [[BRD]]), [[German]] [[republic|Republic]]
