t+pt:[[bege]] ([[WT:EDIT|Assisted]]) <flesh#32574360>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -181,6 +181,7 @@ From {{etyl|enm|en}} {{term|flesh|lang=enm}}, from {{etyl|ang|en}} {{m|ang|flǣs
 * Japanese: {{t|ja|肌色|tr=hadairo|sc=Jpan}}
 * Korean: {{t|ko|살색|sc=Kore}}
 * Polish: {{t+|pl|cielisty|m}}
+* Portuguese: {{t+|pt|bege}}
 * Russian: [[телесный]] ''adj.''
 {{trans-bottom}}
 
