/* Translations */ It's spelled ချက် and it's an adjective meaning Czech <Czech Republic#32622732>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -24,7 +24,7 @@
 * Bengali: {{t|bn|চেক প্রজাতন্ত্র|tr=cek prôjatôntrô|sc=Beng}}
 * Breton: {{t|br|Republik Tchek}}
 * Bulgarian: {{t|bg|Че́шка репу́блика|f|sc=Cyrl}}, {{t+|bg|Че́хия|f|sc=Cyrl}}
-* Burmese: {{t|my|ချက်သမ္မတနိုင်ငံ|sc=Mymr}}, {{t|my|ခ္ယက္|sc=Mymr}}
+* Burmese: {{t|my|ချက်သမ္မတနိုင်ငံ|sc=Mymr}}
 * Catalan: {{t|ca|República Txeca|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè gònghéguó|sc=Hani}}, {{t+|cmn|捷克|tr=Jiékè|sc=Hani}}
