--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -137,7 +137,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Volapük: {{t-needed|vo}}
 * Walloon: {{t+|wa|gordene|f}}
 * Welsh: {{t|cy|llen|f}}, {{t|cy|llenni|f-p}}
-* Yiddish: {{t|yi|פאָרהאַנג|m|sc=Hebr}}
+* Yiddish: {{t|yi|פֿאָרהאַנג|m|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|piece of cloth in a theater}}
