t+el:[[μετρώ]] ([[WT:EDIT|Assisted]]) <count#32661415>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -153,6 +153,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Estonian: {{t|et|lugema}}
 * French: {{t+|fr|compter}}
 * German: {{t+|de|zählen}}
+* Greek: {{t+|el|μετρώ|sc=Grek}}
 * Hungarian: {{t+|hu|számít}}
 * Icelandic: {{t|is|skipta máli}}, {{t+|is|telja|alt=teljast með}}
 {{trans-mid}}
