--- a/en/场/场.12988.wikitext
+++ b/en/场/场.12988.wikitext
@@ -3,7 +3,7 @@
 {{stroke order}}
 
 ===Etymology===
-{{Han simp|場|f=昜|t=丿丿𠄎}}
+{{Han simp|場|f=昜|t=𠃓}}
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=土弓尸竹 (GNSH)}}
