--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -108,6 +108,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * Norwegian: {{t|no|grunnlegge}}
 * Polish: {{t+|pl|założyć}}, {{t+|pl|zakładać}}
 * Portuguese: {{t+|pt|fundar}}
+* Quechua: {{t|qu|tiqsiy}}
 * Romanian: {{t-needed|ro}}
 * Russian: {{t+|ru|основывать|impf|tr=osnóvyvat'}}, {{t+|ru|основать|pf|tr=osnovát'}}
 * Scots: {{t|sco|foond}}
