--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -85,6 +85,7 @@ From {{etyl|la|fro}} "''Iovis dīēs''", variant of '''[[dies Iovis|dīēs Iovis
 [[it:jeudi]]
 [[ku:jeudi]]
 [[lo:jeudi]]
+[[lv:jeudi]]
 [[lb:jeudi]]
 [[lt:jeudi]]
 [[hu:jeudi]]
