--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -122,6 +122,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|fēla
 * Italian: {{t+|it|sentire}}
 * Japanese: {{t+|ja|触れる|tr=ふれる, fureru}}
 * Latvian: {{t|lv|taustīt}}
+* North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|feel}}
 * Norwegian: {{t+|no|føle}}, {{t+|no|kjenne}}
 * Occitan:
 * Old Church Slavonic: {{t|cu|чоути|tr=čuti|sc=Cyrs}}
