--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -145,7 +145,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 * Mizo: {{t|lus|hmu}}, {{t|lus|hmuchhuak}}
 * Mongolian: {{t+|mn|олох|sc=Cyrl}}
 * Ngazidja Comorian: {{t|zdj|uparisa}}
-* North Frisian: {{qualifier|Mooring}} {{t|frr|fine}}
+* North Frisian: {{qualifier|Mooring}} {{t|frr|fine}}, {{qualifier|Föhr-Amrum}} {{t|frr|finj}}
 * Norwegian: {{t+|no|finne}}
 * Novial: {{t|nov|trova}}
 * Ossetian: {{t-needed|os}}
