--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -208,7 +208,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Maore Comorian: {{t|swb|ja|alt=uja}}
 * Mongolian: {{t|mn|ирэх}}
 * Neapolitan: {{t|nap|venì}}
-* North Frisian: {{t|frr|kaame}}
+* North Frisian: {{qualifier|Mooring}} {{t|frr|kaame}}, {{qualifier|Föhr-Amrum}} {{t|frr|kem}}
 * Norwegian: {{t+|no|komme}}
 * Occitan: {{t+|oc|venir}}, {{t|oc|vir}}
 * Old English: {{t|ang|cuman}}
