/* Translations */ jalar is more relevant than halar <pull#32728101>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -202,7 +202,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Italian: {{t+|it|tirare}}
 * Russian: {{t+|ru|тяну́ть|impf}}, {{t+|ru|потяну́ть|pf}}, {{t+|ru|тащи́ть|impf}}, {{t+|ru|потащи́ть|pf}}
 * Scottish Gaelic: {{t|gd|slaod}}, {{t|gd|tarraing}}
-* Spanish: {{t+|es|halar}}, {{t+|es|jalar}}
+* Spanish: {{t+|es|jalar}}, {{t+|es|halar}}
 * Swedish: {{t+|sv|dra}}
 {{trans-bottom}}
 
