t+qu:[[tiksiy]] ([[WT:EDIT|Assisted]]) <found#32749093>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -80,6 +80,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * Old English: {{t|ang|astemnian}}, {{t|ang|gegrundweallian}}
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
 * Portuguese: {{t+|pt|fundar}}
+* Quechua: {{t|qu|tiksiy}}
 * Romanian: {{t-needed|ro}}
 * Russian: {{t+|ru|основывать|impf|tr=osnóvyvat'}}, {{t+|ru|основать|pf|tr=osnovát'}}
 * Scots: {{t|sco|foond}}
